# SO2-TP

./: .gitignore  CMakeLists.txt  builder.bat  cmake_install.cmake  relatorio.md
SO2 - 2021 - DLL para usar no trabalho - versoes 32 e 64 bits (1)/__MACOSX/SO2_TP_DLL_2021/: ._SO2_TP_DLL_2021.h
src/: aviao.cpp  control.cpp  example_client.cpp  example_server.cpp  exemplo1_consumer.c  exemplo_consumer.c  exemplo_producer.c  exemplo_registry.c  main.cpp  passag.cpp  shared_control_aviao.cpp  shared_control_aviao.hpp  shared_control_passageiro.cpp  shared_control_passageiro.hpp  test.cpp  utils.cpp  utils.h  utils.hpp
src/aviao/: aviao.cpp  aviao.hpp  main.cpp  menu.cpp  menu.hpp  startup.cpp
src/control/: ControlerGrafico.cpp  ControlerGrafico.h  ControlerGrafico.rc  control.cpp  control.hpp  control.rc  control.sln  main.cpp  menu.cpp  menu.hpp  pipeserver.cpp  startup.cpp
src/control/GUI/: ControlerGrafico.cpp  ControlerGrafico.h  ControlerGrafico.rc
src/control/gui/: ControlerGrafico.cpp  control.rc  control.vcxproj  resource.h
src/passageiro/: main.cpp  passageiro.hpp  pipeclient.cpp  startup.cpp
